test/expected/regression-delayed-formater.txt
/scripts/regression-delayed-formater.js:17
throw new Error('trace');
^

Error: trace
    at-hack Object.<anonymous> (/scripts/regression-delayed-formater.js:17:7)
